Setting dependency towards xcdl-analysis.jar.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -18,18 +18,18 @@ dist.dir=dist
 dist.jar=${dist.dir}/cdl2smt.jar
 dist.javadoc.dir=${dist.dir}/scaladoc
 excludes=
-file.reference.CDLAnalysis.jar=lib/CDLAnalysis.jar
 file.reference.graph-1.0.1-SNAPSHOT.jar=lib/graph-1.0.1-SNAPSHOT.jar
 file.reference.kiama_2.8.0-1.0.1-sources.jar.zip=lib/kiama_2.8.0-1.0.1-sources.jar.zip
 file.reference.kiama_2.8.0-1.0.1.jar=lib/kiama_2.8.0-1.0.1.jar
 file.reference.optional-0.0.1.jar=lib/optional-0.0.1.jar
 file.reference.scalatest-1.2.jar=lib/scalatest-1.2.jar
+file.reference.xcdl-analysis.jar=lib/xcdl-analysis.jar
 includes=**
 jar.compress=false
 java.platform.active=java_default_platform
 javac.classpath=\
-    ${file.reference.CDLAnalysis.jar}:\
     ${file.reference.graph-1.0.1-SNAPSHOT.jar}:\
+    ${file.reference.xcdl-analysis.jar}:\
     ${file.reference.kiama_2.8.0-1.0.1-sources.jar.zip}:\
     ${file.reference.kiama_2.8.0-1.0.1.jar}:\
     ${file.reference.optional-0.0.1.jar}:\
